Added Callback Servlet & updated web.xml for servlet mapping

--- a/epod/web/WEB-INF/web.xml
+++ b/epod/web/WEB-INF/web.xml
@@ -9,9 +9,25 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>UploadToServer</servlet-name>
+        <servlet-class>epod.servlet.UploadToServer</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>CallbackServlet</servlet-name>
+        <servlet-class>epod.servlet.CallbackServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadToServer</servlet-name>
+        <url-pattern>/upload</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CallbackServlet</servlet-name>
+        <url-pattern>/callback</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
