Added DeliveryView, Updated index.xhtml and remove mapping from web.xml

--- a/epod/web/WEB-INF/web.xml
+++ b/epod/web/WEB-INF/web.xml
@@ -21,14 +21,14 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
-    <servlet-mapping>
+<!--    <servlet-mapping>
         <servlet-name>UploadToServer</servlet-name>
         <url-pattern>/upload</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
+    </servlet-mapping>-->
+<!--    <servlet-mapping>
         <servlet-name>CallbackServlet</servlet-name>
         <url-pattern>/callback</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
     <session-config>
         <session-timeout>
             30
